$Id: NEWS,v 1.6 2004-07-23 19:34:05 wilsonp Exp $

Version 2.7.1
	
BUGS FIXED
        * Removed debugging output at response reminders
        * Fixed ADJOINT libraries to work with v.2 binary libraries [PW] (10/20/2003)
	* Fixed library checking for g77/Fortran math (02/18/2004)
	* Fixed bug on forming output type strings (05/12/2004)

NEW FEATURES
	* Machine-dependent data files (binary ALARA libraries) are searched for in a path
	  defined by ALARA_XSDIR environment variable and
	  ${exec_prefix}/lib/alara/$OSTYPE [PW] (10/27/2003)
	* Improved response reminders at each isotope table and added response reminders
	  to total summary table. (06/03/2004)
	* Added new clearance files: NRC and EU based clearance limits. (06/03/2004)

CODE UPDATES
	* Sample problems and sample data added [DP/PW] (07/23/2004)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.0
	
BUGS FIXED
        * Fixed ADJOINT libraries to work with v.2 binary libraries [PW] (10/20/2003)
        * Reversal of multiplication made on 6/03/03 undone; group order
          in GammaSrc and adjoint input file is the same [AV] (6/18/2003)
        * Fixed indexing of average energy vector for decay types [PW] (06/10/2003)
        * Multiplication of importance and gamma source for bio dose
          calculation is reversed to account for order of gp struc [AV] (6/03/03) 
        * Bio dose results are now divided by detector volume (hence
          new input parameter needed for bio dose request line) [AV] (6/03/03) 
        * Modified bio dose calculation to use volume instead 
          of uservol [AV] (3/25/03) 	
        * Change parameter passed to Result::write so that uservol is 
	  correctly processed [AV] (09/18/2002)	
	* Util/input.C:tokentype() - token conversion to lower case only
	  changed first character [AV] (08/13/2002)
        * Command-line argument handling: when extra argument expected (-v, -t)