@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.6 2004-07-23 19:34:05 wilsonp Exp $
+$Id: NEWS,v 1.7 2004-08-04 19:46:18 wilsonp Exp $
 
 Version 2.7.1
 	
@@ -18,6 +18,8 @@ NEW FEATURES
 
 CODE UPDATES
 	* Sample problems and sample data added [DP/PW] (07/23/2004)
+	* Developed C/C++ equivalent for reading FORTRAN "unformatted
+	  files" and converted RTFLUX handling to be C/C++ based. [PW] (08/04/2004)
 	
 -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	
 
